added html files needed for test check

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <script src="name.js"></script>
 </head>
 <body>
-    <h1>
-        This is sample test
-        More will be here soon
-    </h1>
+    <h3>
+        <p><a href="core-gameplay.html">Core Gameplay</a></p>
+        <p><a href="scene-flow.html">Scene Flow</a></p>
+        <p><a href="cinematics.html">Cinematics</a></p>
+
+    </h3>
 </body>
 </html>
