add folders for organization

--- a/scene-flow.html
+++ b/scene-flow.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Game</title>
+    <title>Scene Flow</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.60.0/phaser.min.js" integrity="sha512-YQL0GVx/Too3vZjBl9plePRIYsRnd1s8N6QOvXPdZ+JMH2mtRTLQXGUDGjNW6zr1HUgcOIury67IvWe91oeEwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="prefab.js"></script>
-    <script src="name.js"></script>
+    <script src="javascript/prefab.js"></script>
+    <script src="javascript/game.js"></script>
 </head>
 <body>
     <h3>
